# Parmigiano-Desktop-QT

./: .gitignore  CMakeLists.txt  CloudPasswordPage.qml  CreateProfilePage.qml  LICENSE  Main.qml  MessengerPage.qml  Resource.qrc  VerifyCodePage.qml  confirmEmailPage.qml  main.cpp  setup.iss
core/: clipboardmanager.cpp  clipboardmanager.h  config.cpp  config.h
core/config/: app_config.h
core/network/: http_client.cpp  http_client.h
core/ui/: clipboard_manager.cpp  clipboard_manager.h  localization_manager.cpp  localization_manager.h  navigation_service.cpp  navigation_service.h  pmg_types.h  ui_state_manager.cpp
domain/: pow_process.cpp  pow_process.h
features/auth/: README.md
features/auth/components/: ArrowBack.qml  ButtonConfirm.qml  CustomInput.qml  InfoDisplay.qml  NetworkStatusBanner.qml  SwitchLanguageMenu.qml  TextContextMenu.qml
features/auth/data/: auth_context.cpp  auth_context.h
features/auth/model/: request_data.h  response_data.h
features/auth/repository/: auth_repository.cpp  auth_repository.h
features/auth/service/dto/: create_profile_model.h  login_model.h  verify_code_model.h
features/auth/service/remote/: base_source.cpp  base_source.h  create_profile_source.cpp  create_profile_source.h  login_source.cpp  login_source.h  verify_code_source.cpp  verify_code_source.h
features/auth/view/: CloudPasswordPage.qml  CreateProfilePage.qml  LoginPage.qml  VerifyCodePage.qml
features/auth/view/js/: validate.js
features/auth/viewmodel/: auth_view_model.cpp  auth_view_model.h
ui/animations/WrongInput/: BorderPulse.qml  Shake.qml
ui/auth/: CloudPasswordPage.qml  ConfirmEmailPage.qml  CreateProfilePage.qml  VerifyCodePage.qml
ui/js/: logic.js  validate.js
ui/templates/: ArrowBack.qml  ButtonConfirm.qml  CustomInput.qml
ui/translations/: ParmigianoDesktop_en_US.ts  ParmigianoDesktop_ru_RU.ts
